tests/passes/well-formed/guard-out-of-bounds.futil
//-p well-formed
import "primitives/core.futil";
import "primitives/memories/comb.futil";

component main(@go go: 1, @clk clk: 1, @reset reset: 1) -> (@done done: 1) {
  cells {
    r1 = std_reg(32);
  }
  wires {
    static<2> group A {
      r1.write_en = %2 ? 1'd1;
      r1.in = 32'd2;
    }
  }

  control {
    A;
  }
}
